# interpreter-in-rust

./: .gitignore  Cargo.toml  README.md
ast/src/: expression.rs  lib.rs  program.rs  statement.rs
demo/: 3.11-trash.monkey  4.4-reduce.monkey
environment/: Cargo.toml
environment/src/: environment.rs  lib.rs  object.rs
error/: Cargo.toml
error/src/: lib.rs
evaluator/: Cargo.toml
evaluator/src/: builtins.rs  converter.rs  evaluator.rs  lib.rs  modify.rs
evaluator/src/builtins/: first.rs  last.rs  len.rs  mod.rs  pop.rs  print.rs  push.rs  rest.rs
examples/: 3.11-trash.monkey  4.4-map.monkey
flags/: Cargo.toml
flags/src/: lib.rs
interpreter/: Cargo.toml
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  precedence.rs  token.rs
main/: Cargo.toml
main/src/: main.rs
object/src/: object.rs
parser/: Cargo.toml
parser/src/: parser.rs
repl/: Cargo.toml
repl/src/: interpreter.rs  lib.rs  repl.rs
