[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { path = "../object" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
ast = { path = "../ast" }
env_logger = "0.10.0"
log = "0.4.17"
