[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
parser = { path = "../parser" }
error = { path = "../error" }
ast = { path = "../ast" }
environment = { path = "../environment" }
env_logger = "0.10.0"
log = "0.4.17"
