[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
anyhow = "1.0.69"
lexer = { path = "../lexer" }
parser = { path = "../parser" }
evaluator = { path = "../evaluator" }
rustyline = { version = "11.0.0" }
